--- a/index.html
+++ b/index.html
@@ -6,10 +6,19 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>camisa 10</title>
     <link rel="stylesheet" href="style.css">
+
+    <style>
+      p{
+          text-align: center;
+      }
+      
+      
+          </style>
+
 </head>
 
 <body>
-  <h1>camisa 10</h1> 
+  <h1  style="text-align:center"  >camisa 10</h1> 
 
 
 <p>Notícias Esportivas Do Mundo Da Bola.</p>
